fix nav on mobile

--- a/src/styles/window.css
+++ b/src/styles/window.css
@@ -58,17 +58,12 @@
 
   .nav {
       display: flex;
+      flex-direction: column;
       gap: 10px;
       justify-content: center;
       padding: 20px;
   }
 
-  @media (min-width:480px)  {
-      .nav {
-          flex-direction: column;
-      }
-
-  }
   @media (min-width:801px)  {
       .nav {
           flex-direction: row;
